# hslab

./: .ghci  .gitignore  README  disabledrc.ghci  hslab.cabal
par/: 01.hs
src/: Hanoi.hs  Interpreter.hs  Lab.hs  Main.hs  Mastermind.hs  Polynomial.hs  Prof.hs
src/blocks/: Main.hs
src/io/: Main.hs
src/lazy/: Main.hs  stat
src/monads/: Cards.hs  HW07.hs  README
src/robominer/: Main.hs
src/rwh/: Ch03.hs
src/testing/: HW09.hs
